# Praxis-Anruf-Beantworter

./: README.md  package-lock.json  package.json  pyproject.toml
backend/: app.py  dataGenerator.py  database.py  emailLoader.py  llm.py  llm_manager.py  transcribe.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/pages/: BasicTable.tsx  Card.tsx
tests/: conftest.py  emailSender.py  test_project.py
